make sure the modal dialog isn't too tall, use scroll bars if so
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1667187 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/htdocs/steve_interactive.css
+++ b/www/htdocs/steve_interactive.css
@@ -145,6 +145,8 @@ p {
 .modal-body {
   padding: 20px;
   word-wrap: break-word;
+  max-height: 450px;
+  overflow: auto;
 }
 pre {
   word-wrap: break-word;
